2021-04-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Added to DESCRIPTION

2021-01-03  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci

2018-03-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.2

	* NAMESPACE: registered S3 print method for RcppExample

	* man/RcppDate.Rd: Update to https URL
	* man/RcppExample.Rd: Idem
	* man/RcppParams.Rd: Idem
	* inst/NEWS.Rd: Idem

	* src/init.c: Added R_init_* registration

	* R/RcppDateExample.R: Updated .Call thanks to registration
	* R/RcppExample.R: Idem
	* R/RcppMatrixExample.R: Idem
	* R/RcppParamsExample.R: Idem
	* R/RcppStringVectorExample.R: Idem
	* R/RcppVectorExample.R: Idem

2014-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Switch Depends: to Imports: for Rcpp, RcppClassic
	* NAMESPACE: Add import() for Rcpp, RcppClassic

2012-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.1

	* DESCRIPTION: Added versioned Depends: on current Rcpp, RcpClassic
	and R as this package cannot be built under older versions.

	* inst/NEWS.Rd: Added

2010-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.0 --- new package, split off RcppExamples
	0.1.4 which now covers the Rcpp API only

	* man/*: Updated to stress that this API is deprecated, added links
	to Rcpp documentation
